<resources>
    <string name="app_name">MvpApp</string>
    <string name="action_settings">Settings</string>

    <string name="screen_name_login">Вход в личный кабинет</string>
    <string name="screen_name_profile">Профиль</string>
    <string name="screen_name_chat">Чат</string>
    <string name="screen_name_tasks">Задания</string>

    <!--Menu-->
    <string name="add_task">Добавить задание</string>

    <!--Auth-->
    <string name="enter_correct_name">Введите правильный e-mail</string>
    <string name="enter_correct_password">Введите правильный пароль</string>
    <string name="user_not_found">Пользователь с таким именем и паролем не найден. Введите корректные данные</string>

    <!--Hints-->
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_enter_description">Введите описание</string>
    <string name="hint_enter_deadline">Введите дату дедлайна</string>
    <string name="hint_enter_name">Введите название</string>

    <!--Buttons-->
    <string name="login">Войти</string>
    <string name="logout">Выйти</string>
    <string name="load">Загрузить</string>
    <string name="send">Отправить</string>
    <string name="open_chat">Открыть чат</string>

    <!--Profile-->
    <string name="personal_info_title">Персональные данные</string>
    <string name="contact_info_title">Контактная информация</string>
    <string name="teacher_title">Преподаватель</string>
    <string name="birthday_title">Дата рождения:</string>
    <string name="disciplines_title">Преподаваемые дисциплины</string>
    <string name="email_title">E-mail:</string>
    <string name="phone_title">Телефон:</string>
    <string name="table_tasks">Таблица заданий</string>

    <!--TaskItem-->
    <string name="date_title">Дата:</string>
    <string name="group_title">Группа:</string>
    <string name="subject_title">Предмет:</string>
    <string name="task_description_title">Описание задания:</string>

    <!-- TaskItem Solution -->
    <string name="task_solution_stud">Студент:</string>
    <string name="task_solution_comment">Комментарий:</string>
    <string name="task_solution_status">Статус:</string>

    <string name="download">Скачать</string>
    <string name="confirm">Принять</string>
    <string name="reject">Отклонить</string>
    <string name="solution">Решение</string>

    <!--Dialogs-->
    <string name="wait_dialog_progress">Пожалуйста подождите…</string>
    <string name="error_dialog_ok">Ок</string>
    <string name="error_dialog_title">Ошибка</string>

    <string name="toolbar_task">Задание</string>
    <string name="toobar_new_task">Новое задание</string>

    <string name="empty" />

    <string name="task_description">Описание задания:</string>
    <string name="task_description_example">
        Что необходимо делать в этом задании.\nПодробное описание в файле.
        \nЧто необходимо делать в этом задании.\nПодробное описание в файле.
        \nЧто необходимо делать в этом задании.\nПодробное описание в файле.
        \nЧто необходимо делать в этом задании.\nПодробное описание в файле.
        \nЧто необходимо делать в этом задании.\nПодробное описание в файле.
        \nЧто необходимо делать в этом задании.\nПодробное описание в файле.
        \nЧто необходимо делать в этом задании.\nПодробное описание в файле.
        \nЧто необходимо делать в этом задании.\nПодробное описание в файле.
    </string>
    <string name="task_download">Скачать задание</string>
    <string name="task_status_show">Посмотреть</string>
    <string name="task_status_now_downloaded">Не загружено</string>

    <string name="name_discipline_format">- %s:</string>

    <!--Bottom Bar-->
    <string name="test_name">%s\n%s\n%s</string>
    <string name="main_menu_tasks">Задания</string>
    <string name="main_menu_chat">Чат</string>
    <string name="main_menu_profile">Профиль</string>

    <string name="rationale_doc_picker">We need this pemission to read documents from device.</string>

    <string name="enter_date">Введите дату</string>
    <string name="enter_subject_name">Введите название предмета</string>
    <string name="download_error">Ошибка</string>
    <string name="repeat">Повторить</string>
    <string name="no_available_tasks">Нет доступных заданий</string>
    <string name="choose_task">Выбрать файл</string>
    <string name="add">Добавить</string>
    <string name="choose_discipline">Выберите предмет</string>
    <string name="deadline_date">Дата дедлайна:</string>
    <string name="task_name">Название задания:</string>
    <string name="type_your_message">Введите сообщение</string>
    <string name="no_messages_yet">Список сообщений пуст</string>
    <string name="toolbar_dialog_list">Сообщения</string>
    <string name="toolbar_dialog">Иван Иванов</string>
    <string name="dialogs_empty">Ваш список диалогов пуст</string>
    <string name="no_available_task">Нет доступных заданий</string>



    <string name="Tasks_list">Список заданий</string>
    <string name="stydent_title">Студент</string>
    <string name="average_ball">Средний балл</string>



    <string name="Add_file">Добавить файл</string>
    <string name="downloading">Загрузка</string>
    <string name="zadanie">задание</string>

</resources>
